<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Major Data -->
    <string name="app_name">Werewolf</string>
    <string name="TextCancel">Cancel</string>
    <string name="TextApply">Apply</string>
    <string name="TextGoBack">X</string>
    <string name="PlaceholderName">X</string>
    <string name="ButtonRemove">-</string>
    <string name="ButtonAdd">+</string>
    <string name="LoremIpsum">Lorem Ipsum</string>
    <string name="LoremIpsumLong">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.\n\n
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>

    <!-- Activity : Home -->
    <string name="HomeImageView">Logo of the app\' !</string>
    <string name="HomeButtonCreateParty">Create Party</string>
    <string name="HomeButtonSeeRules">See Rules</string>
    <string name="HomeButtonChangeLanguage">Change Language</string>

    <!-- Activity : Rules -->
    <string name="RulesTextTitle">Werewolf\'s Rules</string>
    <string name="RulesTextRules">
        This game takes place in a village infested by werewolves.\n\n
        When they go on their quest to wipe-out the population, one member per night, the village decides to eliminate the threat by voting each morning a death sentence for one of its member.\n\n
        Watch out, for some people within the community have unnatural powers, following goals that may be diverging from yours…\n\n
    </string>
    <string name="RulesTextTeams">The Different Teams</string>
    <string name="RulesTextRoles">The Different Roles</string>

    <!-- Dialog : Role -->
    <string name="RoleImage">I\'m an image !</string>
    <string name="RoleTextPlayer">X plays…</string>
    <string name="RoleTextPlayed">X played…</string>
    <string name="RolePlayerDead">X is dead !</string>

    <!-- Dialog : Trigger -->
    <string name="TriggerTitle">Select the values :</string>


    <!-- Activity : Create Party -->
    <string name="PartyNewNavBarPlayers">Players</string>
    <string name="PartyNewNavBarRoles">Roles</string>
    <string name="PartyNewNavBarLaunch">Launch</string>
    <string name="PartyNewPlayersWarning">You need at least X players to launch a Party</string>
    <string name="PartyNewPlayersInputHint">Player\'s Name</string>
    <string name="PartyNewRolesTextIntroduction">Number of Roles / Number of Players</string>
    <string name="PartyNewRolesTextNumber">0 / 0</string>
    <string name="PartyNewPlayersButtonLaunch">Create the Party !</string>

    <!-- Activity : Party -->
    <string name="PartyNavBarPlayers">Players</string>
    <string name="PartyNavBarRoles">Roles</string>
    <string name="PartyNavBarLeave">Leave</string>
    <string name="PartyPlayerTextHide">Hide the Data :</string>
    <string name="PartyRoleTextDay">Day n° X</string>
    <string name="PartyRoleTextNight">Night n° X</string>
    <string name="PartyRoleButtonDay">End Day</string>
    <string name="PartyRoleButtonNight">End Night</string>
    <string name="PartyButtonLeave">Leave the Party</string>


    <!-- RecyclerViews - Row Role -->
    <string name="RowRoleImageDescription">I\'m an image !</string>
    <string name="RowRoleNumberOfRoles">123</string>


    <!-- RecyclerViews - Row Player -->
    <string name="RowPlayerDefaultNameIsDying">X is dying !</string>
    <string name="RowPlayerImageDescription">I\'m an image !</string>
    <string name="RowPlayerButtonKill">I\'m a button !</string>


    <!-- Teams content -->
    <string name="team_villager">Village</string>
    <string name="team_werewolf">Werewolf</string>
    <string name="team_other">Non-Affiliated</string>


    <!-- Roles content -->

    <!-- WEREWOLVES -->
    <string name="role_werewolf">Werewolf</string>
    <string name="role_werewolf_description">
        When the night comes, the werewolves agree to kill a member of the village.\n\n
        If a draw occurs (or no victim is designated), no villager shall be killed that night.
    </string>
    <string name="role_whitewolf">White Wolf</string>
    <string name="role_whitewolf_description">
        Very rare creature, it hides amongst ‘‘regular’’ werewolves to exterminate the village, but also aims to be the last survivor.\n\n
        Its blood-thirst allows him to kill another player every 2 turns.
    </string>
    <string name="role_big_bad_wolf">Big Bad Wolf</string>
    <string name="role_big_bad_wolf_description">
        Alpha male of the Werewolves, he is the one to settle any voting dispute amongst the pack.\n\n
        Every 2 turns, it can kill another player (as long as he\'s not a Werewolf).\n\n
        Contrarily to the White Wolf, it entirely belongs to the Werewolf side.\n\n
        If it dies during a vote, the pack is so distraught that it doesn\'t kill anyone the next night.\n\n
    </string>
    <string name="role_infect_father_of_wolves">Infect Father of Wolves</string>
    <string name="role_infect_father_of_wolves_description">
        Once per party, it can change the wolves victim into a Werewolf (hence, it doesn\'t die).\n\n
        The infected player keeps its previous powers !!\n\n
    </string>

    <!-- VILLAGERS -->
    <string name="role_villager">Villager</string>
    <string name="role_villager_description">
        It is the default character.\n\n
        Without any power, it can only debate and vote during pyre.
    </string>
    <string name="role_honest_man">Honest Man</string>
    <string name="role_honest_man_description">
        At the beginning of a day of his choice, he can reveal his true role :\n
        being a simple Villager.
    </string>
    <string name="role_village_idiot">Village Idiot</string>
    <string name="role_village_idiot_description">
        If the village votes for him, he can reveal his role and be immediately pardoned (he can also keep his role secret… and die).\n\n
        Then, the Village Idiot will remain alive, but won\'t vote anymore, and cannot be elected Mayor.\n\n
        If he dies by any other mean, the preceding rule obviously do not apply.
    </string>
    <string name="role_cupid">Cupid</string>
    <string name="role_cupid_description">
        During the very first night, he will designate 2 players which will instantly fall in love.\n\n
        If one of them happens to die, his significant other dies of grief. The lovers cannot vote against one another.\n\n
        If the lovers belongs to the same side (2 Villagers, 2 Werewolves), they keep their objective. Ohterwise (ex : 1 Villager + 1 Werewolf), they now aim to be the last 2 players.
    </string>
    <string name="role_hunter">Hunter</string>
    <string name="role_hunter_description">
        Whenever he dies (whatever the reason is), it can designate a player that immediately dies.
    </string>
    <string name="role_weasel">Weasel</string>
    <string name="role_weasel_description">
        Each night, she can designate a player and know whether it woke up during the night. If yes, the MJ also tells her if the player that sits the right of the previous player woke up or not.\n\n
        For instance, roles like the SoothSayer, Werewolves or the Flute Player wake up every night.\n
        On the other hand, the witch won\'t wake up when she runs out of potion; Cupid only wakes up the first night; etc…\n
        At last, roles like the Hunter never wake up, since they have nothing to do the night.\n
    </string>
    <string name="role_crow">Crow</string>
    <string name="role_crow_description">
        Each night, it can designate a player which will receive a supplementary vote on the next poll.
    </string>
    <string name="role_barber">Barber</string>
    <string name="role_barber_description">
        Each night (but only once throughout the game), it can decide to \"shave\" a player.\n\n
        If he is a Werewolf, he dies ;\n
        Otherwise, the barber dies.
    </string>
    <string name="role_inquisitor">Inquisitor</string>
    <string name="role_inquisitor_description">
        If he decides to use his power, he must reveal himself as the Inquisitor.\n\n
        Before the debates, he can ask a player to reveal his role. Even though the player has to answer with an existing role, he doesn\'t have to tell the truth. Also, the questioned player MUST NOT reveal if he lied or not.\n\n
        If the questioned player is killed at the end of the debate, but is innocent, the Inquisitor lose his power.
    </string>
    <string name="role_stutterer_judge">Stutterer Judge</string>
    <string name="role_stutterer_judge_description">
        1st role to wake up, he can organize a new vote in the middle of the night.\n\n
        He can only use his power once, and cannot do it for the first night.
    </string>
    <string name="role_small_girl">Small Girl</string>
    <string name="role_small_girl_description">
        She can discreetly look around during the Werewolves turn to identify them.\n\n
        Above all, she will have to be extra vigilant, since they will kill her as soon as possible.
    </string>
    <string name="role_savior">Savior</string>
    <string name="role_savior_description">
        The Savior designate a player each night that will survive if the Werewolves (White Wolf and Big Bad Wolf included) decide to kill him.\n\n
        On the other hand, any other death sentence (poisoned potion, killed by the village\'s vote…) will kill him despite his protection.\n\n
        The Savior can protect himself, but he can protect the same person twice in a row.
    </string>
    <string name="role_witch">Witch</string>
    <string name="role_witch_description">
        She possesses two potions :\n\n
        One for Healing, which can save a person freshly murdered by Werewolves (herself included) ;\n
        One for Poisoning, which can kill any player.\n\n
        They can only be used once, and only one potion per turn (if tempted she wants to use it : she may very well keep them for later).
    </string>
    <string name="role_soothsayer">Soothsayer</string>
    <string name="role_soothsayer_description">
        Each night, she can designate a player of which she\'ll discover the role.
    </string>
    <string name="role_abominable_sectarian">Abominable Sectarian</string>
    <string name="role_abominable_sectarian_description">
        At the start of the game, the GM separates the players into 2 distinct categories according to an obvious criterion (colors worn, girls / boys, wearing glasses, etc.).\n\n
        The sectarian seeks to ensure dominance of his group, and will win by exterminating all members of the other group.\n\n
        Ex: the criterion chosen is \"wearing glasses\".\n
        If the Sectarian does not have glasses, he will seek to kill everyone who wears it.
    </string>
    <string name="role_flute_player">Flute Player</string>
    <string name="role_flute_player_description">
        Each night, he can charm 1 or 2 players (depending on the rule applied in the game).\n
        Charmed players of this night recognize each other.\n\n
        If at any time, the Flute Player is alive and all other living players have been charmed, he immediately wins the game.
    </string>


    <!-- Roles Triggers -->
    <string name="trigger_role_cupid">Lover</string>
    <string name="trigger_role_infect_father_of_wolves">Infected</string>
    <string name="trigger_role_flute_player">Charmed</string>
    <string name="trigger_role_crow">Vote + 1</string>
    <string name="trigger_role_savior">Protected</string>
</resources>