<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mobiledevelopment.werewolf.fragments.FragmentPartyNewPlayers">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/PartyNewPlayerWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/PartyNewPlayersWarning"
                android:textColor="@color/colorPrimary"
                android:textStyle="italic" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="50dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/PartyNewPlayerEditText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="15dp"
                        android:ems="10"
                        android:hint="@string/PartyNewPlayersInputHint"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/PartyNewPlayerAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/ButtonAdd" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/PartyNewPlayerChipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
